@@ -25,8 +25,6 @@
 #include <stdio.h>
 #include <string.h>
 
-/* #define DEBUG */
-
 static const unsigned char ExifHeader[] = {0x45, 0x78, 0x69, 0x66, 0x00, 0x00};
 
 struct _ExifContentPrivate
