@@ -31,8 +31,6 @@
 #include <time.h>
 #include <math.h>
 
-/* #define DEBUG */
-
 #undef  MIN
 #define MIN(a, b)  (((a) < (b)) ? (a) : (b))
 
